--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@ ul li a:hover {
   font-size: large;
 }
 
+.cards_container {
+  max-width: 1440px;
+  width: 83%;
+  margin: auto;
+}
+
 .contact_text {
   background-color: #ffffff;
   color: #000;
@@ -58,19 +64,14 @@ ul li a:hover {
 }
 
 .cards {
+  margin: auto;
+  width: 80%;
   margin-top: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 20px;
 }
 
 .first_image {
   max-width: 1195px;
   width: 100%;
-  max-height: 600px;
-  height: 100%;
   border-radius: 15px;
 }
 
@@ -82,29 +83,28 @@ ul li a:hover {
 
 .content_images {
   display: flex;
+  justify-content: center;
   gap: 25px;
+}
+
+.paragraphs {
+  margin: auto;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
 }
 
 .first_paragraph {
   font-family: "Helvetica Neue", sans-serif;
-  width: 951px;
-  height: 177px;
-  text-align: left;
   margin-top: 60px;
 }
 
 .second_paragraph {
   font-family: "Helvetica Neue", sans-serif;
-  width: 951px;
-  height: 281px;
-  text-align: left;
 }
 
 .third_paragraph {
   font-family: "Helvetica Neue", sans-serif;
-  width: 951px;
-  height: 151px;
-  text-align: left;
 }
 
 .additional {
@@ -115,6 +115,10 @@ ul li a:hover {
   background-color: #0a22f4;
   border-radius: 28px;
   padding: 18px 77px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  margin-top: 50px;
 }
 
 .additional:hover {
@@ -268,4 +272,14 @@ footer {
   width: 121px;
   height: 35px;
   margin-left: 30px;
+}
+
+.burger {
+  width: 60px;
+  height: 60px;
+  margin: auto;
+  display: none;
+}
+
+@media (max-width: 768px) {
 }
